--- a/1_Sender/package.json
+++ b/1_Sender/package.json
@@ -7,7 +7,8 @@
   "type": "module",
   "dependencies": {
     "express": "^5.2.1",
-    "logging": "^4.2.0"
+    "logging": "^4.2.0",
+    "mqtt": "^5.14.1"
   },
   "scripts": {
     "start": "node src/main.js"
