--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,17 @@ services:
     image: emqx/emqx:latest
     container_name: mqtt-server
     ports:
+      - "1883:1883"
       - "8083:8083"
+      - "8084:8084"
+      - "8883:8883"
       - "18083:18083" # Web-UI, Default-Login: admin/public
     restart: always  # Optional: ensures the container restarts on failure
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:18083"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
   mqtt-sender:
     build:
       context: 1_Sender
@@ -17,10 +25,12 @@ services:
     ports:
       - "8080:8080"
     depends_on:
-      - mqtt-server
+      mqtt-server:
+        condition: service_healthy
   mqtt-empfaenger:
     build:
       context: 2_Empfaenger
       dockerfile: Dockerfile
     depends_on:
-      - mqtt-sender
+      mqtt-sender:
+        condition: service_started
