--- a/2_Empfaenger/package.json
+++ b/2_Empfaenger/package.json
@@ -6,6 +6,7 @@
   "license": "BSD-3-Clause",
   "type": "module",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "logging": "^4.2.0",
     "mqtt": "^5.14.1"
   },
